css/layout.css
/* ... */
.actioncard-img {
	display: block;
		-webkit-border-radius: 3px;  -moz-border-radius: 3px; -ms-border-radius: 3px;  -o-border-radius: 3px;    
	border-radius: 3px;
}

.actioncard-holder { 
	background: rgb(1,1,1) url(../i-base/bg-ornament-type2.png) repeat 0 0;
	color: rgb(240,240,240);	
	/*min-height: 56px; total 66px*/
	padding: 30px 0;
	text-align: center;
}

.actioncard-desc {
	margin: 30px 0 0 0;
	padding: 0 50px 0;
}

.actioncard-desc .heading-h3 {
	color: rgb(172,0,0);
	padding: 0 100px;
	text-align: center;
}
#beaverslider a {
position: relative;
z-index: 999;
}
#cart_empty,
.delivery_message {
display: none;
}

.ym_my_baloon {
width: 20px;
height: 20px;
background: #ccc;
}
.map-holder iframe, 
.map-holder {
    width: 100%;
}
	
.ymaps-b-placemark__top,
.ymaps-b-placemark__bottom,
.ymaps-b-placemark__left,
.ymaps-b-placemark__right  {
  opacity: 0;
}
.ymaps-point-overlay.active {
  z-index: 99999;
}
.contact_big_map--label {
    background: #fff none repeat scroll 0 0;
    border: 3px solid rgb(172, 0, 0);
    border-radius: 5px;
    float: left;
    left: 15px;
    padding: 10px;
    top: -115px;
    width: 250px;
	position: absolute;
	
}
.ym_my_baloon {
    position: relative;
}

.ym_my_baloon .placemark{
   background: rgba(0, 0, 0, 0) url("../i-all/ico-for-map.png") no-repeat scroll 0 0;
    height: 38px;
    left: -5px;
    position: absolute;
    top: -35px;
    width: 30px;	
}
.ym_my_baloon  .contact_big_map--label {
display: none;
} 
.ym_my_baloon:hover .placemark,
.ym_my_baloon.active .placemark,
.ym_my_baloon.current .placemark {
    background: url("../i-all/ico-for-map-hover.png") 0 0 no-repeat;
}
#map2 .places_wrap.open .ym_my_baloon:hover .placemark,
#map2 .places_wrap.open .ym_my_baloon.active .placemark,
#map2 .places_wrap.open .ym_my_baloon.current .placemark {
   background:  url("../i-all/ico-for-map.png") no-repeat 0 0 !important;
}
.places_wrap ymaps {
background:  none !important;
}
.label_info {
text-align: left;
width: 100%;
}
.ymaps-2-1-39-placemark-overlay ymaps,
.ym_my_baloon {
background: none !important;
}

.ym_my_baloon.active .contact_big_map--label {
display: block;
}
.ymaps-2-1-39-placemark-overlay ymaps.ymaps-2-1-39-default-cluster {
    background-image: url("https://api-maps.yandex.ru/2.0.43/images/c2784ae9ffc628d8a84f28dec13c48cd.png") !important;
    background-size: 100% 100% !important;
}
.ym_my_baloon .factory_selector {
width: 100%;
float: left;
margin: 5px 0 0 0;
}
.ym_my_baloon .factory_selector span {
display: block;
float: left;
line-height: 24px;
font-size: 14px;
padding: 0 10px;
color: rgb(255, 240, 0);
background: rgb(172, 0, 0);
cursor: pointer;
}
.label_icon, .label_info {
float: left;
position: relative;	
}
.ym_my_baloon.current .factory_selector {
display: none;
}	

.places_wrap.open .overlay {
z-index: 1 !important;
}		
.places_wrap.open .active_overlay {
z-index: 99991 !important;
}	

.ym_my_baloon .placemark,
.ym_my_baloon {
 z-index: 99998 !important;
}
.ym_my_baloon  .contact_big_map--label {
z-index: 99999 !important;
} 
.ymaps-2-1-39-places-pane {
z-index: 999 !important;
}
.ymaps-2-1-39-places-pane.open {
z-index: 99996 !important;
}

/*
.places_wrap {
z-index: 2498 !important;
}
.places_wrap.open {
z-index: 2500 !important;
}
*/





.asvpopup-tabs-holder {
overflow: hidden;
}
.contact_big_map--label .pmc {
content: " ";
display: block;
width: 10px;
height: 10px;
cursor: pointer;
background: url("../i-all/pmc.png") 0 0 no-repeat;
cursor: pointer;
position: absolute;
right: -5px;
top: -5px;
/* z-index: 99999; */
}

.form-universal .fm-yes,
.form-universal .fm-no,
.form-quolity .fm-yes,
.form-quolity .fm-no,
.delivery_form  .fm-yes,
.delivery_form   .fm-no,
.form-samovivoz .fm-yes,
.form-samovivoz  .fm-no,
.pizza_factory_adress_wrap,
.hide   {
display: none;
}
.pizza_factory_adress_wrap.show {
display: block;
}

.map2_caller {
position: absolute;
bottom: 0;
left: 0;
width: 100px;
height: 100px;
border-radius: 50px;
background: #fff;
border: 2px solid #ccc;
}




	
	
	
	

